metrics/network-policy-monitoring-allow-egress-logs-check-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-logs-check-grafana
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: logs-check
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 3000
